--- a/style.css
+++ b/style.css
@@ -9,7 +9,7 @@
 body{
     font-size: 16px;
     letter-spacing: 0.4px;
-    background-color: black;
+    background-color: rgb(0, 0, 0);
 }
 
 .wrapper{
@@ -42,9 +42,10 @@ body{
 }
 
 .slide1 .textColumn .textContent h2{
-    font-size: 38pt;
+    font-size: 36pt;
     font-family: 'Times New Roman';
     margin-bottom: 20px;
+    color: #00b4ff;
 }
 
 .slide1 .textColumn .textContent .stripes{
@@ -101,19 +102,27 @@ body{
 }
 
 .slide2 .textColumn .textContent h2{
-    font-size: 40pt;
+    font-size: 36pt;
     font-family: 'Times New Roman';
     margin-bottom: 20px;
 }
 
 .slide2 .textColumn .textContent ul{
-    font-size: 16pt;
+    font-size: 20pt;
     font-family: Helvetica;
     padding-left: 20px;
 }
 
 .slide2 .textColumn .textContent ul li{
     margin-bottom: 20px;
+}
+
+.slide2 .textColumn .textContent ul li:first-child{
+    font-size: 23pt;
+}
+
+.slide2 .textColumn .textContent ul li:last-child{
+    font-size: 26pt;
 }
 
 .slide2 .imageColumn{
@@ -131,7 +140,7 @@ body{
 /* Slide 3*/
 
 .slide3{
-    height: 700px;
+    height: 720px;
     background-image: linear-gradient(180deg, white, #CDEAF7);
     display: flex;
 }
@@ -145,7 +154,7 @@ body{
 }
 
 .slide3 .textColumn .textContent h2{
-    font-size: 40pt;
+    font-size: 32pt;
     font-family: 'Times New Roman';
     margin-bottom: 20px;
 }
@@ -160,12 +169,21 @@ body{
     margin-bottom: 20px;
 }
 
+.slide3 .textColumn .textContent ul li:first-child{
+    font-size: 23pt;
+}
+
+.slide3 .textColumn .textContent ul li:last-child{
+    font-size: 26pt;
+}
+
 .slide3 .imageColumn{
     width: 50%;
     height: 100%;
     display: flex;
-    justify-content: center;
+    justify-content: flex-end;
     align-items: center;
+    padding: 10px;
 }
 
 .slide3 .imageColumn .image{
